# Para-Fetch

./: CMakeLists.txt  README.md  build.bat
.github/workflows/: build.yml  c-cpp.yml
src/: ColorManager.hpp  main.cpp
